# hyperion

./: .gitignore  Dockerfile  Procfile  data.db  entry.sh  pyproject.toml  readme.md  run.py  setup.py  skaffold.yaml
back/: __init__.py  __main__.py  app.py  data.db  orm.py
back/api/: __init__.py  bike.py  bikeregister.py  crime.py  geo.py  police.py  postcodes.py  social.py  test.py  util.py
back/bikes/: biketest.py
back/cli/: __init__.py
back/controllers/: bike.py  crime.py  geo.py  root.py  social.py
back/fetch/: bikeregister.py  police.py  postcode.py  twitter.py  wikipedia.py
back/models/: __init__.py  base.py  bike.py  bikes.py  location.py  neighbourhood.py  postcode.py  tools.py  util.py
back/templates/: index.html
docs/: globals.html  index.html
docs/classes/: _app_.app.html  _components_bikelist_.bikelist.html  _components_crime_.crimelist.html  _components_people_.people.html  _components_postcodedata_.policeinfo.html  _components_postcodedata_.postcodedata.html  _components_searchbox_.searchbox.html
docs/interfaces/: _app_.iappstate.html  _components_bikelist_.ibiketheft.html  _components_crime_.crimedata.html  _components_crime_.crimestate.html  _components_crime_.icrimestate.html  _components_hyperlinklistitem_.linkedlistitemprops.html  _components_message_.messageprops.html  _components_people_.ipeoplestate.html  _components_person_.iperson.html  _components_postcodedata_.ipostcodedataprops.html  (+9 more)
hyperion/: __main__.py
hyperion_cli/: __main__.py  settings.py  util.py
test/: __init__.py  test_api.py  test_cli.py
(+60 files in other folders)
