[tool.poetry]
name = "hyperion-cli"
version = "1.0.2"
description = "CLI and rest api for postcode data"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/arlyon/hyperion"
authors = ["Alexander Lyon <arlyon@me.com>"]

[tool.poetry.dependencies]
python = "^3.7"
uvloop = "^0.14.0"
aiobreaker = "^1.0.0"
aiohttp-cors = "^0.7.0"
aiohttp = "^3.6.2"
click = "^7.0"
colorama = "^0.4.3"
peewee = "^3.13.1"
geopy = "^1.21.0"
lxml = "^4.5.0"
peony-twitter = "^1.1.5"
python-dotenv = "^0.11.0"
brotlipy = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-asyncio = "^0.10.0"
pytest-mypy = "^0.4.2"
pytest-flake8 = "^1.0.4"

[tool.poetry.scripts]
server = "hyperion_cli.__main__:run_server"
cli = "hyperion_cli.__main__:run_cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

